# flask-github-webhook

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: pipeline.yaml  release.yaml
src/: flask_github_webhook.py
tests/: conftest.py  test_app.py  test_hook.py
