[tool.poetry]
name = "flask-github-webhook"
version = "0.2.0"
description = "Flask extension for github-webhooks"
readme = "README.md"
homepage = "https://github.com/shawalli/flask-github-webhook"
repository = "https://github.com/shawalli/flask-github-webhook"
authors = ["Shawn Wallis <shawn.p.wallis@gmail.com>"]
license = "Apache License 2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git"
]
include = [
    "LICENSE.md",
]

[tool.poetry.dependencies]
python = "^3.6.7"
github-webhook = "^1.0.2"

[tool.poetry.dev-dependencies]
coveralls = "^2.1.1"
pre-commit = "^2.6.0"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]
include = "\\.pyi?$"
exclude = """
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
